# EggShell-PDF-Data-Extractor

./: .cproject  .gitignore  .project  CMakeLists.txt  README  config.status  configure
goo/: Makefile
test/: index.html  page1.html
xpdf/: HTMLGen.cc  HTMLGen.h  Makefile  TextOutputDev.h  pdfdetach  pdffonts  pdfimages  pdfinfo  pdftohtml  pdftohtml.cc  pdftops  pdftotext
