cmake_minimum_required(VERSION 3.3)
project(xpdf_3_04__clion_)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    fofi/FoFiBase.cc
    fofi/FoFiBase.h
    fofi/FoFiEncodings.cc
    fofi/FoFiEncodings.h
    fofi/FoFiIdentifier.cc
    fofi/FoFiIdentifier.h
    fofi/FoFiTrueType.cc
    fofi/FoFiTrueType.h
    fofi/FoFiType1.cc
    fofi/FoFiType1.h
    fofi/FoFiType1C.cc
    fofi/FoFiType1C.h
    goo/FixedPoint.cc
    goo/FixedPoint.h
    goo/gfile.cc
    goo/gfile.h
    goo/GHash.cc
    goo/GHash.h
    goo/GList.cc
    goo/GList.h
    goo/gmem.cc
    goo/gmem.h
    goo/gmempp.cc
    goo/GMutex.h
    goo/GString.cc
    goo/GString.h
    goo/gtypes.h
    goo/parseargs.c
    goo/parseargs.h
    splash/Splash.cc
    splash/Splash.h
    splash/SplashBitmap.cc
    splash/SplashBitmap.h
    splash/SplashClip.cc
    splash/SplashClip.h
    splash/SplashErrorCodes.h
    splash/SplashFont.cc
    splash/SplashFont.h
    splash/SplashFontEngine.cc
    splash/SplashFontEngine.h
    splash/SplashFontFile.cc
    splash/SplashFontFile.h
    splash/SplashFontFileID.cc
    splash/SplashFontFileID.h
    splash/SplashFTFont.cc
    splash/SplashFTFont.h
    splash/SplashFTFontEngine.cc
    splash/SplashFTFontEngine.h
    splash/SplashFTFontFile.cc
    splash/SplashFTFontFile.h
    splash/SplashGlyphBitmap.h
    splash/SplashMath.h
    splash/SplashPath.cc
    splash/SplashPath.h
    splash/SplashPattern.cc
    splash/SplashPattern.h
    splash/SplashScreen.cc
    splash/SplashScreen.h
    splash/SplashState.cc
    splash/SplashState.h
    splash/SplashTypes.h
    splash/SplashXPath.cc
    splash/SplashXPath.h
    splash/SplashXPathScanner.cc
    splash/SplashXPathScanner.h
    xpdf/about-text.h
    xpdf/AcroForm.cc
    xpdf/AcroForm.h
    xpdf/Annot.cc
    xpdf/Annot.h
    xpdf/Array.cc
    xpdf/Array.h
    xpdf/BuiltinFont.cc
    xpdf/BuiltinFont.h
    xpdf/BuiltinFontTables.cc
    xpdf/BuiltinFontTables.h
    xpdf/Catalog.cc
    xpdf/Catalog.h
    xpdf/CharCodeToUnicode.cc
    xpdf/CharCodeToUnicode.h
    xpdf/CharTypes.h
    xpdf/CMap.cc
    xpdf/CMap.h
    xpdf/CompactFontTables.h
    xpdf/config.h
    xpdf/CoreOutputDev.cc
    xpdf/CoreOutputDev.h
    xpdf/Decrypt.cc
    xpdf/Decrypt.h
    xpdf/Dict.cc
    xpdf/Dict.h
    xpdf/Error.cc
    xpdf/Error.h
    xpdf/ErrorCodes.h
    xpdf/FontEncodingTables.cc
    xpdf/FontEncodingTables.h
    xpdf/Form.cc
    xpdf/Form.h
    xpdf/Function.cc
    xpdf/Function.h
    xpdf/Gfx.cc
    xpdf/Gfx.h
    xpdf/GfxFont.cc
    xpdf/GfxFont.h
    xpdf/GfxState.cc
    xpdf/GfxState.h
    xpdf/GlobalParams.cc
    xpdf/GlobalParams.h
    xpdf/HTMLGen.cc
    xpdf/HTMLGen.h
    xpdf/ImageOutputDev.cc
    xpdf/ImageOutputDev.h
    xpdf/JArithmeticDecoder.cc
    xpdf/JArithmeticDecoder.h
    xpdf/JBIG2Stream.cc
    xpdf/JBIG2Stream.h
    xpdf/JPXStream.cc
    xpdf/JPXStream.h
    xpdf/Lexer.cc
    xpdf/Lexer.h
    xpdf/Link.cc
    xpdf/Link.h
    xpdf/NameToCharCode.cc
    xpdf/NameToCharCode.h
    xpdf/NameToUnicodeTable.h
    xpdf/Object.cc
    xpdf/Object.h
    xpdf/OptionalContent.cc
    xpdf/OptionalContent.h
    xpdf/Outline.cc
    xpdf/Outline.h
    xpdf/OutputDev.cc
    xpdf/OutputDev.h
    xpdf/Page.cc
    xpdf/Page.h
    xpdf/Parser.cc
    xpdf/Parser.h
    xpdf/PDFCore.cc
    xpdf/PDFCore.h
    xpdf/pdfdetach.cc
    xpdf/PDFDoc.cc
    xpdf/PDFDoc.h
    xpdf/PDFDocEncoding.cc
    xpdf/PDFDocEncoding.h
    xpdf/pdffonts.cc
    xpdf/pdfimages.cc
    xpdf/pdfinfo.cc
    xpdf/pdftohtml.cc
    xpdf/pdftopng.cc
    xpdf/pdftoppm.cc
    xpdf/pdftops.cc
    xpdf/pdftotext.cc
    xpdf/PreScanOutputDev.cc
    xpdf/PreScanOutputDev.h
    xpdf/PSOutputDev.cc
    xpdf/PSOutputDev.h
    xpdf/PSTokenizer.cc
    xpdf/PSTokenizer.h
    xpdf/SecurityHandler.cc
    xpdf/SecurityHandler.h
    xpdf/SplashOutputDev.cc
    xpdf/SplashOutputDev.h
    xpdf/Stream-CCITT.h
    xpdf/Stream.cc
    xpdf/Stream.h
    xpdf/TextOutputDev.cc
    xpdf/TextOutputDev.h
    xpdf/TextString.cc
    xpdf/TextString.h
    xpdf/UnicodeMap.cc
    xpdf/UnicodeMap.h
    xpdf/UnicodeMapTables.h
    xpdf/UnicodeTypeTable.cc
    xpdf/UnicodeTypeTable.h
    xpdf/UTF8.h
    xpdf/XFAForm.cc
    xpdf/XFAForm.h
    xpdf/xpdf.cc
    xpdf/XPDFApp.cc
    xpdf/XPDFApp.h
    xpdf/XPDFCore.cc
    xpdf/XPDFCore.h
    xpdf/XpdfPluginAPI.cc
    xpdf/XpdfPluginAPI.h
    xpdf/XPDFTree.cc
    xpdf/XPDFTree.h
    xpdf/XPDFTreeP.h
    xpdf/XPDFViewer.cc
    xpdf/XPDFViewer.h
    xpdf/XRef.cc
    xpdf/XRef.h
    xpdf/Zoox.cc
    xpdf/Zoox.h
    aconf-dj.h
    aconf-win32.h
    aconf.h
    aconf2.h)

add_executable(xpdf_3_04__clion_ ${SOURCE_FILES})